lab3/albertingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: albertingress
spec:
  tls:
  - hosts:
      - albert.cloud
    secretName: lab3-tls
  rules:
  - host: albert.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: albertsvc
            port:
              number: 3000
